--- a/package.json
+++ b/package.json
@@ -35,5 +35,17 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.1.1.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/el-app/btd-app.git"
+  },
+  "author": "elapp",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/el-app/btd-app/issues"
+  },
+  "homepage": "https://github.com/el-app/btd-app#readme"
 }
