--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "be7c5633-42fa-48a4-b8cd-d74dd331c758"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
